[package]
name = "decision-trees-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
ndarray = "0.15"
linfa = "0.6.0"
linfa-trees = "0.6.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
